<resources>
    <string name="app_name">Movie App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="year">Year</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="writer">Writer</string>
    <string name="director">Director</string>
    <string name="movieposter">moviePoster</string>
    <string name="movies_not_found">no result(s) found</string>
</resources>