<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.example.movieapp.models.details.MovieDetailsRespnse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/abMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="Movie Details"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scrollMovieDetail"/>

        <ScrollView
            android:id="@+id/scrollMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scrollMovieDetailHeight"
            app:layout_constraintTop_toBottomOf="@id/abMovieDetail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightMediumGray"
                android:paddingBottom="@dimen/clMovieDetailsPaddingBottom">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/navy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailMoviePoster">

                    <TextView
                        android:id="@+id/tvMovieDetailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tvMovieDetailTitleMarginStart"
                        android:layout_marginTop="@dimen/tvMovieDetailTitleMarginTop"
                        android:layout_marginEnd="@dimen/tvMovieDetailTitleMarginEnd"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/tvMovieDetailTitlePadding"
                        android:text="@string/title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tvMovieDetailTitleTextSize"
                        android:textStyle="normal"
                        android:fontFamily="@font/roboto_slab"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvMovieDetailType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tvMovieDetailTypeMarginStart"
                        android:layout_marginTop="@dimen/tvMovieDetailTypeMarginTop"
                        android:layout_marginBottom="@dimen/tvMovieDetailTypeMarginBottom"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/type"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tvMovieDetailTypeTextSize"
                        android:textStyle="normal"
                        android:fontFamily="@font/roboto_slab"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailTitle"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvMovieDetailYear"
                        android:layout_width="@dimen/tvMovieDetailYearWidth"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tvMovieDetailYearMarginTop"
                        android:layout_marginEnd="@dimen/tvMovieDetailYearMarginEnd"
                        android:layout_marginBottom="@dimen/tvMovieDetailYearMarginBottom"
                        android:ellipsize="end"
                        android:text="@string/year"
                        android:fontFamily="@font/roboto_slab"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tvMovieDetailYearTextSize"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.384"
                        app:layout_constraintStart_toEndOf="@+id/tvMovieDetailType"
                        app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailTitle"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <ImageView
                    android:id="@+id/ivMovieDetailMoviePoster"
                    android:layout_width="@dimen/ivMovieDetailMoviePosterWidth"
                    android:layout_height="@dimen/ivMovieDetailMoviePosterHeight"
                    android:background="@color/navy"
                    android:paddingStart="@dimen/ivMovieDetailMoviePosterPaddingStart"
                    android:paddingEnd="@dimen/ivMovieDetailMoviePosterPaddingEnd"
                    android:paddingBottom="@dimen/ivMovieDetailMoviePosterPaddingBottom"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movieposter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDirector1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvDirector1TextSize"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/director"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout"
                    android:layout_margin="@dimen/tvDirector1Margin"
                    />
                <TextView
                    android:id="@+id/tvMovieDetailDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDirector1"
                    android:layout_margin="@dimen/tvDirector1Margin"

                    />
                <View
                    android:id="@+id/vDirector"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vDirectorHeight"
                    android:layout_margin="@dimen/vDirectorMargin"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailDirector"
                    />

                <TextView
                    android:id="@+id/tvMovieDetailWriter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvMovieDetailWriter1TextSize"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/writer"
                    android:layout_margin="@dimen/tvMovieDetailWriter1Margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vDirector"
                    />
                <TextView
                    android:id="@+id/tvMovieDetailWriter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tvMovieDetailWriter2TextSize"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailWriter1"
                    android:layout_margin="@dimen/tvMovieDetailWriter2Margin"
                    />

                <View
                    android:id="@+id/vMovieDetailWriter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vMovieDetailWriterHeight"
                    android:layout_margin="@dimen/vMovieDetailWriterMargin"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailWriter2"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
